--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,9 @@
         background-size: cover;
         background-position: 550px 0px;
     }
+    .jumbotron img{
+        width: 160px;
+    }
 }
 
 .jumbotron {
